--- a/md5_viewer.vcproj
+++ b/md5_viewer.vcproj
@@ -166,6 +166,10 @@
 			UniqueIdentifier="{4FC737F1-C7A5-4376-A066-2A32D752A2FF}"
 			>
 			<File
+				RelativePath=".\src\Anim_Parser.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\Animation.cpp"
 				>
 			</File>
@@ -183,6 +187,10 @@
 			</File>
 			<File
 				RelativePath=".\src\MD5.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\src\MD5_Parser.cpp"
 				>
 			</File>
 			<File
@@ -208,6 +216,14 @@
 			UniqueIdentifier="{93995380-89BD-4b04-88EB-625FBE52EBFB}"
 			>
 			<File
+				RelativePath=".\include\Anim_Parser.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\Anim_Types.h"
+				>
+			</File>
+			<File
 				RelativePath=".\include\Animation.h"
 				>
 			</File>
@@ -225,6 +241,10 @@
 			</File>
 			<File
 				RelativePath=".\include\MD5.h"
+				>
+			</File>
+			<File
+				RelativePath=".\src\MD5_Parser.h"
 				>
 			</File>
 			<File
