Look! It renders again!

--- a/md5_viewer.vcproj
+++ b/md5_viewer.vcproj
@@ -183,6 +183,10 @@
 				>
 			</File>
 			<File
+				RelativePath=".\src\GLSLShader.cpp"
+				>
+			</File>
+			<File
 				RelativePath=".\src\main.cpp"
 				>
 			</File>
@@ -246,6 +250,10 @@
 			</File>
 			<File
 				RelativePath=".\include\GLee.h"
+				>
+			</File>
+			<File
+				RelativePath=".\include\GLSLShader.h"
 				>
 			</File>
 			<File
